--- a/Billed-app-FR-Front/package.json
+++ b/Billed-app-FR-Front/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent"
+    "test": "jest --coverage --watchAll --verbose"
   },
   "jest": {
     "verbose": false,
